--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!-- This is a comment -->
+<!-- This is a comment! -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>HEAD</head>
+  <head><title>TITLE HERE</title><link LINK HERE></head>
     <body>BODY</body>
 </html>
 
