Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- This is a comment! -->
 <!DOCTYPE html>
 <html lang="en">
-  <head><title>TITLE HERE</title><link LINK HERE></head>
+  <head><title>TITLE HERE</title><link rel="stylesheet" type="text/css" href="style.css"></head>
     <body>BODY</body>
 </html>
 
